fix download button on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,7 +48,8 @@ body {
     #container { width: 98%; padding: 8px 1%; }
     #drawing { border: none; width: 98%; height: 98%; margin-bottom: 1%; }
     #drawing_container { padding: 2% 0 0 1.5%; background: #000; height: 100%; width: 98%; position: initial; }
-    #download { 
+    #download {
+        position: fixed; 
         bottom: 0; 
         right: 0;
         border: 4px solid #000; 
